# wildberries-course

./: .gitignore  Cargo.toml
L0/: .env  Cargo.toml  README.md  docker-compose.yml
L0/db/migrations/: init.sql
L0/src/: main.rs
L0/tests/: test_get_endpoint.rs
L1/L1-1/src/: main.rs
L1/L1-10/: Cargo.toml
L1/L1-10/src/: main.rs
L1/L1-11/: Cargo.toml
L1/L1-11/src/: main.rs
L1/L1-12/: Cargo.toml
L1/L1-12/src/: main.rs
L1/L1-13/: Cargo.toml
L1/L1-13/src/: main.rs
L1/L1-14/: Cargo.toml
L1/L1-14/src/: main.rs
L1/L1-15/: Cargo.toml
L1/L1-15/src/: main.rs
L1/L1-16/: Cargo.toml
L1/L1-16/src/: main.rs
L1/L1-17/: Cargo.toml
L1/L1-17/src/: main.rs
L1/L1-18/: Cargo.toml
L1/L1-18/src/: main.rs
L1/L1-19/: Cargo.toml
L1/L1-19/src/: main.rs
L1/L1-2/src/: main.rs
L1/L1-20/: Cargo.toml
L1/L1-20/src/: main.rs
L1/L1-21/: Cargo.toml
L1/L1-21/src/: main.rs
L1/L1-22/: Cargo.toml
L1/L1-22/src/: main.rs
L1/L1-23/: Cargo.toml
L1/L1-23/src/: main.rs
L1/L1-24/: Cargo.toml
L1/L1-24/src/: main.rs
L1/L1-5/: Cargo.toml
L1/L1-6/: Cargo.toml
L1/L1-7/: Cargo.toml
L1/L1-8/: Cargo.toml
L1/L1-9/: Cargo.toml
L2/L2-1/: Cargo.toml
L2/L2-10/: Cargo.toml
L2/L2-11/: Cargo.toml
L2/L2-12/: Cargo.toml  README.md
L2/L2-13/: Cargo.toml  README.md
L2/L2-14/: Cargo.toml  README.md
L2/L2-15/: Cargo.toml  README.md
L2/L2-16/: Cargo.toml  README.md
L2/L2-2/: Cargo.toml
L2/L2-3/: Cargo.toml
L2/L2-4/: Cargo.toml
L2/L2-5/: Cargo.toml
L2/L2-6/: Cargo.toml
L2/L2-7/: Cargo.toml
L2/L2-8/: Cargo.toml
L2/L2-9/: Cargo.toml
(+46 files in other folders)
