[package]
name = "L0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-net = "0.0.0"
tokio-postgres = "0.7.11"
log = "0.4.22"
